bk_ida/gccida/g2/signed_type
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1935:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1951:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 10) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1951:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 10) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1953:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 9) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1953:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 9) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1955:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 8) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1955:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 8) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1957:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 7) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1957:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 7) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1959:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 6) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/c-common.c:1959:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 6) == section_name ) 
       ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/signed_type/src/obj/c-common.o] Error 1
